--- a/EnjoyEat/EnjoyEat/Views/MemberLogin/Index.cshtml
+++ b/EnjoyEat/EnjoyEat/Views/MemberLogin/Index.cshtml
@@ -1,54 +1,58 @@
-@*<form asp-controller="MemberLogin" asp-action="Login"></form>*@
-<form action="/MemberManagement/Index">
-<form  action="forms/book-a-table.php" method="post" role="form" class="php-email-form" data-aos="fade-up" data-aos-delay="100">
+@section Styles{
+    <link href="~/css/memberlogin.css" rel="stylesheet" />
+    <link href="~/lib/font-awesome/css/all.min.css" rel="stylesheet" />
+}
+<form action="" method="post" role="form" class="php-email-form" data-aos="fade-up" data-aos-delay="100">
     <main id="main">
-        <section class="breadcrumbs">
-            <div class="container">
-                <h1 style="color:burlywood">
-                    <div>
-                        <div class="flex-shrink-0" style="text-align:center">
-                            <p>會員登入</p>
-                        </div>
-                        <img src="#" alt="" width="300">
-                    </div>
-                </h1>
-            </div>
-       
-            <div class="d-grid gap-2 col-6 mx-auto">
+        <div>
+            <section class="breadcrumbs">
+                <div class="container ">
+                    <h1 id="Logo">
+                        會員登入
+                        <i class="fa-solid fa-right-to-bracket"></i>
+                    </h1>
+                </div>
+                <br />
+                <div class=" d-grid gap-2 col-6 mx-auto">
+                    <h4>
+                        <i class="fa-solid fa-lock"></i>
+                        <span>帳號:</span>
+                    </h4>
+                    <input type="text" aria-label="Account" placeholder="請輸入會員帳號"
+                           maxlength="12" minlength="8" required>
+                    <h4>
+                        <i class="fa-solid fa-key"></i>
+                        <span>密碼:</span>
+                    </h4>
+                    <input type="password" aria-label="Password" class="" placeholder="請輸入會員密碼"
+                           maxlength="12" minlength="8" required>
 
-                      <input type="text" aria-label="Account" class="text-danger" placeholder="請輸入會員帳號"
-                       maxlength="20" minlength="8" required>
-                      <br>
-                      <br>
-                      <input type="password" aria-label="Password" class="text-danger" placeholder="請輸入會員密碼"
-                       maxlength="20" minlength="8" required>
+                    <label for="c1">
+                        <input type="checkbox" id="checkRember" name="cc"  />
+                        <span class="rememberMe">記住我</span>
+                    </label>
+                    <br>
 
-                <label for="c1">
-                    <input type="checkbox" id="c1" name="cc" />
-                    記住我
-                </label>
+                    <button class="btn btn-primary" type="button">登入</button>
+                    <a asp-controller="MemberRegister" asp-action="Index" class="btn btn-primary">註冊會員</a>
+                    <button class="btn btn-danger" type="button">忘記密碼</button>
+                </div>
                 <br>
-     
-                <button class="btn btn-primary" type="submit">登入</button>
-                <a asp-controller="MemberRegister" asp-action="Index" class="btn btn-primary">註冊會員</a>
-                <button class="btn btn-danger" type="button">忘記密碼了?點我</button>
-            </div>
-            <br>
-            <div class="d-grid gap-5 col-6 mx-auto">
-                <button type="button" class="btn btn-outline-primary">
-                    <img src="facebook.png" alt="facebook-icon">
-                    Facebook登入
-                </button>
-            </div>
-            <div class="d-grid gap-5 col-6 mx-auto">
-                <button type="button" class="btn btn-outline-primary">
-                    <img src="google.png" alt="google-icon">
-                    Google 登入
-                </button>
-            </div>
-        </section>
+                <div class="d-grid gap-5 col-6 mx-auto">
+                    <button type="button" class="btn btn-outline-primary">
+                        <img src="facebook.png" alt="facebook-icon">
+                        Facebook登入
+                    </button>
+                </div>
+                <div class="d-grid gap-5 col-6 mx-auto">
+                    <button type="button" class="btn btn-outline-primary">
+                        <img src="google.png" alt="google-icon">
+                        Google 登入
+                    </button>
+                </div>
+            </section>
+        </div>
     </main><!-- End #main -->
 </form>
-</form>
->>>>>>> Stashed changes
+
 
