--- a/EnjoyEat/EnjoyEat/Views/MemberRegister/Index.cshtml
+++ b/EnjoyEat/EnjoyEat/Views/MemberRegister/Index.cshtml
@@ -1,78 +1,114 @@
 ﻿@section Styles{
-    <link rel="stylesheet" href="/memberLoginStyle.css">
+    <link href="~/css/memberloginstyle.css" rel="stylesheet" />
+    <link href="~/lib/font-awesome/css/all.min.css" rel="stylesheet" />
 }
 <!-- d-flex align-items-center -->
-<form asp-controller="MemberRegister" asp-action="Index"></form>
-<form action="forms/book-a-table.php" method="post" role="form" class="php-email-form" data-aos="fade-up" data-aos-delay="100">
+<div class="php-email-form" data-aos="fade-up" data-aos-delay="100">
     <main id="main">
         <section class="breadcrumbs">
-            <div class="container">
-                <h1 style="color:burlywood;margin-top:30px">
-                    <div>
-                        <div class="flex-shrink-0" style="text-align:center">
-                            <p>註冊會員</p>
-                        </div>
-                        <img src="#" alt="" width="300">
-                    </div>
+            <div class="container" id="member">
+                <h1 id="Logo">
+                    會員註冊
+                    <i class="fa-solid fa-address-card"></i>
                 </h1>
             </div>
+
             <div class="d-grid gap-2 col-6 mx-auto" id="memberRegistration">
-                <label class="form-label">註冊帳號</label>
-                <input type="text" maxlength="20" minlength="6" id="Account" class="form-control" aria-labelledby="Account"required />>
+                <h4>
+                    <i class="fa-solid fa-lock"></i>
+                    <span>註冊帳號</span>
+                </h4>
+
+                <input type="text" maxlength="12" minlength="8" id="Account" class="form-control" placeholder="請輸入帳號" aria-labelledby="Account" required />
                 <div id="AccountHelpBlock" class="form-text">
-                    最小不能低於6碼,最大上限為20碼,不限英文與數字
+                    最小不能低於8碼,最大上限為12碼,不限英文與數字
                 </div>
 
-                <label for="inputpassword" class="form-label">註冊密碼:</label>
-                <input type="password" maxlength="20" minlength="6" id="Password" class="form-control" aria-labelledby="Password" required>
+                <h4>
+                    <i class="fa-solid fa-key"></i>
+                    <span>註冊密碼</span>
+                </h4>
+                <input type="password" maxlength="20" minlength="6" id="Password" class="form-control" placeholder="請輸入密碼" aria-labelledby="Password" required>
 
                 <div id="PasswordHelpBlock" class="form-text">
-                    最小不能低於6碼,最大上限為20碼,不限英文與數字
+                    最小不能低於8碼,最大上限為12碼,不限英文與數字
                 </div>
+                
+                <h4>
+                    <i class="fa-solid fa-key"></i>
+                    <span>再次輸入註冊密碼</span>
+                </h4>
+                <input type="password" id="PasswordConfirm" class="form-control" placeholder="請再次輸入密碼" aria-labelledby="PasswordConfirm" required>
 
-                <label for="inputpasswordConfirm" class="form-label">再次輸入註冊密碼:</label>
-                <input type="password" id="PasswordConfirm" class="form-control" aria-labelledby="PasswordConfirm" required>
-                <div id="PasswordHelpBlock" class="form-text"></div>
-                <div class="form-label">
-                    <label class="form-label">姓:</label>
-                    <input type="text" class="form-label">
-                    <label class="form-label">名:</label>
-                    <input type="text" class="form-label">
-                    <br>
-                    <label for="imputMemberBirthday" class="form-label">出生年月日:</label>
-                    <input type="date" min="1900-01-01" max="2023-01-01" required="required" />
-                </div>
-                <h6>性別:</h6>
-                <div class="form-check">
-                    <input type="radio" class="form-check-input" id="radio1" name="optradio" value="option1" required>男生
-                    <label class="form-check-label" for="radio1"></label>
-                </div>
-                <div class="form-check">
-                    <input type="radio" class="form-check-input" id="radio2" name="optradio" value="option2" required>女生
-                    <label class="form-check-label" for="radio2"></label>
-                </div>
+                <h4>
+                    <i class="fa-solid fa-circle-info"></i>
+                    <span>會員基本資料</span>
+                </h4>
 
-                <label for="inputMemberPhone" class="form-label">手機號碼:</label>
-                <input type="text" class="form-control" aria-labelledby="Phone" required />
-                <label for="inputMemberE-mail" class="form-label">E-mail:</label>
-                <input type="text" class="form-control" aria-labelledby="E-mail" required />
-                <label for="inputMemberAddress" class="form-label">地址:</label>
-                <input type="text" class="form-control" aria-labelledby="Address">
+                <div class="row">
 
+                    <div class="col-md-2">
+                        <div class="infoClass">
+                            姓氏:
+                        </div>
+                    </div>
+                    <input type="text" class="form-label col-md-4 " placeholder="請輸入姓氏">
+
+                    <div class="col-md-2">
+                        <div class="infoClass">
+                            名字:
+                        </div>
+                    </div>
+                    <input type="text" class="form-label col-md-4" placeholder="請輸入名字">
+
+                    <div class="col-md-2">
+                        <div class="infoClass">
+                            電話:
+                        </div>
+                    </div>
+                    <input type="text" class="form-label col-md-4" placeholder="請輸入電話">
+
+
+                    <div class="col-md-2">
+                        <div class="infoClass">
+                            性別:
+                        </div>
+                    </div>
+                    <select name="" class="col-md-4 book-a-table form-label" required>
+                        <option value="" disabled selected>請選擇性別</option>
+                        <option  value="">{{ad.txt}}</option>
+                    </select>
+
+                    <div class="col-md-3">
+                        <div class="infoClass">
+                            出生日期:
+                        </div>
+                    </div>
+                    <input type="date" class="left col-md-11 form-label" min="1900-01-01" max="2023-01-01" required="required" />
+
+                    <div class="col-md-3">
+                        <div class="infoClass">
+                            電子郵件:
+                        </div>
+                    </div>
+                    <input type="text" class="left form-label col-md-11" placeholder="請輸入電子郵件">
+
+                    <div class="col-md-3">
+                        <div class="infoClass">
+                            聯絡地址:
+                        </div>
+                    </div>
+                    <input type="text" class="left form-label col-md-11" placeholder="請輸入聯絡地址">
+                </div>
+                <div class="d-grid gap-2 col-md-9 mx-auto">
+                    <button class="btn btn-primary" type="submit">送出</button>
+                </div>
             </div>
         </section>
     </main><!-- End #main -->
 
-</form>
-<br>    
-<br>
-<div class="d-grid gap-2 col-6 mx-auto">
-    <button class="btn btn-primary" type="submit">送出</button>
-    <button class="btn btn-primary" type="reset">清除資料</button>
- @*   <a asp-controller="MemberLogin" asp-action="Index" class="btn btn-primary" type="submit">送出</a>*@
-</div>
+@section Scripts{
+    <script>
 
-<script>
-
-
-</script>
+    </script>
+}
