--- a/EnjoyEat/EnjoyEat/wwwroot/css/memberLoginStyle.css
+++ b/EnjoyEat/EnjoyEat/wwwroot/css/memberLoginStyle.css
@@ -1,4 +1,42 @@
-.Account-setting{
+h4{
+    margin-top:10px;
+}
+.form-label {
+    border-radius: .25rem;
+    font-size:20px;
+}
+#member{
+    margin-bottom:20px;
+}
+
+#Logo {
+    text-align: center;
+    color: burlywood;
+    margin-top: 30px;
+}
+
+.row {
+     margin-right: 0; 
+}
+
+.row .left {
+    margin-left: 12px;
+}
+
+.infoClass{
+    font-size:20px;
+    margin-bottom:10px;
+}
+
+.form-label {
+    font-size: 18px;
+    margin-bottom: 10px;
+}
+.btn{
+
+}
+
+/*.Account-setting {
     right: 200px;
 }
 
@@ -13,7 +51,7 @@
 }
 
 .inputName{
-  padding:20px solid;
+  padding:20px;
   display:flex;
 }
 
@@ -36,4 +74,4 @@ image-rendering: auto;
 .flex-container3{
   display:flex;
   flex-direction:row-reverse;
-}
+}*/
