--- a/EnjoyEat/EnjoyEat/Views/Menu/Index.cshtml
+++ b/EnjoyEat/EnjoyEat/Views/Menu/Index.cshtml
@@ -1,12 +1,8 @@
 
 ﻿@using System.Composition;
-@*
-    For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
-*@
 @{
     Layout = "_Layout";
 }
-
 @model IEnumerable<EnjoyEat.Models.ViewModel.MenuViewModel>
 @section Styles {
     <link href="~/css/menustyle.css" rel="stylesheet" />
@@ -100,6 +96,15 @@
                     <li data-filter=".filter-dessert">甜點</li>
                     <li data-filter=".filter-beverage">飲料</li>
                 </ul>
+                @*<ul id="menu-flters">
+                    <li @@click="selectCategory('*')" :class="{ 'filter-active': selectedCategory === '*' }">全部</li>
+                    <li @@click="selectCategory('filter-appetizer')" :class="{ 'filter-active': selectedCategory === 'filter-appetizer' }">前菜</li>
+                    <li @@click="selectCategory('filter-soups')" :class="{ 'filter-active': selectedCategory === 'filter-soups' }">湯品</li>
+                    <li @@click="selectCategory('filter-mainMeal')" :class="{ 'filter-active': selectedCategory === 'filter-mainMeal' }">主餐</li>
+                    <li @@click="selectCategory('filter-snacks')" :class="{ 'filter-active': selectedCategory === 'filter-snacks' }">點心</li>
+                    <li @@click="selectCategory('filter-dessert')" :class="{ 'filter-active': selectedCategory === 'filter-dessert' }">甜點</li>
+                    <li @@click="selectCategory('filter-beverage')" :class="{ 'filter-active': selectedCategory === 'filter-beverage' }">飲料</li>
+                </ul>*@
             </div>
         </div>
     </section>
@@ -107,6 +112,7 @@
         <div class="menuDetail">
             <div class="row menu-container" data-aos="fade-up" data-aos-delay="200">
                 <div v-for="t in temp" :class="{'col-lg-4': true, 'menu-item': true, [t.categoryName]: true}">
+                    @*<div v-for="t in filteredItems" :key="t.productName" class="col-lg-4 menu-item">*@
                     <img :src="baseUrl + t.mealImg" class="menu-img" alt="">
                     <div class="menu-content">
                         <a href="#">{{t.productName}}</a><span>${{t.unitPrice}}</span>
@@ -124,13 +130,14 @@
     {
     <script src="https://cdn.jsdelivr.net/npm/vue@2.7.14/dist/vue.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/1.4.0/axios.min.js" integrity="sha512-uMtXmF28A2Ab/JJO2t/vYhlaa/3ahUOgj1Zf27M5rOo8/+fcTUVH0/E0ll68njmjrLqOBjXM3V9NiPFL5ywWPQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-
     <script>
+
         var app = new Vue({
             el: '#app',
             data: {
                 baseUrl: '',
                 temp: [],
+                selectedCategory: '*',
             },
             mounted:
                 function () {
@@ -138,13 +145,26 @@
                     _this.baseUrl = window.location.origin + '/';
                     axios.get("https://localhost:7071/api/menu/GetMenu")
                         .then(response => {
-                            _this.temp = response.data;
+                            _this.temp = response.data; 
                             //console.log(JSON.stringify(response.data));
                         });
                 },
+            computed: {
+                filteredItems: function () {
+                    let _this = this;
+                    if (this.selectedCategory === '*') {
+                        return _this.temp; // 若選擇全部，返回原始菜單資訊
+                    } else {
+                        return _this.temp.filter(t => t.categoryName === _this.selectedCategory);
+                    }
+                },
+            },
             methods: {
-
-            }
+                selectCategory: function (category) {
+                    let _this = this;
+                    _this.selectedCategory = category;
+                },
+            },
         });
     </script>
 
