--- a/EnjoyEat/EnjoyEat/Views/MemberRegister/RegisterSuccess.cshtml
+++ b/EnjoyEat/EnjoyEat/Views/MemberRegister/RegisterSuccess.cshtml
@@ -1,6 +1,6 @@
 ﻿<form action="forms/book-a-table.php" method="post" role="form" class="php-email-form" data-aos="fade-up" data-aos-delay="100">
     <main id="main">
-      <section class="breadcrumbs"style=">
+      <section class="breadcrumbs">
         <div class="container">
             <h1 style="color:burlywood;text-align:center;margin-top:20px" >
               <div>
