--- a/EnjoyEat/EnjoyEat/Views/MemberRegister/Index.cshtml
+++ b/EnjoyEat/EnjoyEat/Views/MemberRegister/Index.cshtml
@@ -1,9 +1,17 @@
 ﻿@section Styles{
     <link href="~/css/memberloginstyle.css" rel="stylesheet" />
     <link href="~/lib/font-awesome/css/all.min.css" rel="stylesheet" />
+    <link rel="stylesheet"
+          href="https://cdn.jsdelivr.net/npm/vue2-datepicker@3.11.0/index.css" />
+}
+@{
+    if (ViewBag.Error != "")
+    {
+        <h1>@ViewBag.Error</h1>
+    }
 }
 <!-- d-flex align-items-center -->
-<div class="php-email-form" data-aos="fade-up" data-aos-delay="100">
+<div id="regis" class="php-email-form" data-aos="fade-up" data-aos-delay="100">
     <main id="main">
         <section class="breadcrumbs">
             <div class="container" id="member">
@@ -19,27 +27,33 @@
                     <span>註冊帳號</span>
                 </h4>
 
-                <input type="text" maxlength="12" minlength="8" id="Account" class="form-control" placeholder="請輸入帳號" aria-labelledby="Account" required />
+                <input type="text" maxlength="12" minlength="8" id="Account" class="form-control" v-model="account" placeholder="請輸入帳號" aria-labelledby="Account" required />
+
                 <div id="AccountHelpBlock" class="form-text">
                     最小不能低於8碼,最大上限為12碼,不限英文與數字
                 </div>
-
+                <div id="AccountHelpBlock" class="form-text nono" v-if="accountDuplicate">
+                    您的註冊帳號已註冊過
+                </div>
                 <h4>
                     <i class="fa-solid fa-key"></i>
                     <span>註冊密碼</span>
                 </h4>
-                <input type="password" maxlength="20" minlength="6" id="Password" class="form-control" placeholder="請輸入密碼" aria-labelledby="Password" required>
+                <input type="password" maxlength="12" minlength="8" id="Password" :value="password" @@change="check" class="form-control" v-model="password" placeholder="請輸入密碼" aria-labelledby="Password" required>
 
                 <div id="PasswordHelpBlock" class="form-text">
                     最小不能低於8碼,最大上限為12碼,不限英文與數字
                 </div>
-                
+
                 <h4>
                     <i class="fa-solid fa-key"></i>
                     <span>再次輸入註冊密碼</span>
                 </h4>
-                <input type="password" id="PasswordConfirm" class="form-control" placeholder="請再次輸入密碼" aria-labelledby="PasswordConfirm" required>
+                <input type="password" maxlength="12" minlength="8" id="PasswordConfirm" class="form-control" :value="again" v-model="again" @@change="check" placeholder="請再次輸入密碼" aria-labelledby="PasswordConfirm" required>
 
+                <div id="AccountHelpBlock" class="form-text nono" v-if="show">
+                    請確認您的輸入與註冊密碼相符
+                </div>
                 <h4>
                     <i class="fa-solid fa-circle-info"></i>
                     <span>會員基本資料</span>
@@ -52,21 +66,21 @@
                             姓氏:
                         </div>
                     </div>
-                    <input type="text" class="form-label col-md-4 " placeholder="請輸入姓氏">
+                    <input type="text" class="form-label col-md-4 " v-model="lastName" placeholder="請輸入姓氏">
 
                     <div class="col-md-2">
                         <div class="infoClass">
                             名字:
                         </div>
                     </div>
-                    <input type="text" class="form-label col-md-4" placeholder="請輸入名字">
+                    <input type="text" class="form-label col-md-4" v-model="firstName" placeholder="請輸入名字">
 
                     <div class="col-md-2">
                         <div class="infoClass">
                             電話:
                         </div>
                     </div>
-                    <input type="text" class="form-label col-md-4" placeholder="請輸入電話">
+                    <input type="text" class="form-label col-md-4" minlength="10" maxlength="10" v-model="phone" placeholder="請輸入電話">
 
 
                     <div class="col-md-2">
@@ -74,41 +88,137 @@
                             性別:
                         </div>
                     </div>
-                    <select name="" class="col-md-4 book-a-table form-label" required>
+                    <select name="" class="col-md-4 book-a-table form-label" required v-model="gender">
                         <option value="" disabled selected>請選擇性別</option>
-                        <option  value="">{{ad.txt}}</option>
+                        <option :value="g.value" v-for="g in genders">{{g.txt}}</option>
                     </select>
 
-                    <div class="col-md-3">
+                    <div class="col-md-8">
                         <div class="infoClass">
                             出生日期:
                         </div>
                     </div>
-                    <input type="date" class="left col-md-11 form-label" min="1900-01-01" max="2023-01-01" required="required" />
+                    <div id="d1" class="calendar col-md-4 ">
+                        <!-- datepicker -->
+                        <date-picker v-model="birthday"
+                                     value-type="format"
+                                     name="ReserveDate"
+                                     id="datepicker"
+                                     class="form-label "
+                                     placeholder="請選擇出生日期"></date-picker>
+                    </div>
 
                     <div class="col-md-3">
                         <div class="infoClass">
                             電子郵件:
                         </div>
                     </div>
-                    <input type="text" class="left form-label col-md-11" placeholder="請輸入電子郵件">
+                    <div id="AccountHelpBlock" class="form-text nono col-md-6" v-if="emailDuplicate">
+                        您的電子郵件已註冊過
+                    </div>
+                    <input type="email" class="left form-label col-md-11" v-model="email" placeholder="請輸入電子郵件">
 
                     <div class="col-md-3">
                         <div class="infoClass">
                             聯絡地址:
                         </div>
                     </div>
-                    <input type="text" class="left form-label col-md-11" placeholder="請輸入聯絡地址">
+                    <input type="text" class="left form-label col-md-11" v-model="address" placeholder="請輸入聯絡地址">
                 </div>
                 <div class="d-grid gap-2 col-md-9 mx-auto">
-                    <button class="btn btn-primary" type="submit">送出</button>
+                    <button class="btn btn-primary" type="button" @@click="submitInfo">送出</button>
                 </div>
             </div>
         </section>
     </main><!-- End #main -->
+</div>
 
 @section Scripts{
+    <script src="https://cdn.jsdelivr.net/npm/vue2-datepicker@3.11.0/index.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11.7.5/dist/sweetalert2.all.min.js"></script>
     <script>
-
+            let app = new Vue({
+                el: '#regis',
+                data: {
+                    account: "",
+                    password: "",
+                    again: "",
+                    accountDuplicate: false,
+                    emailDuplicate: false,
+                    show: false,
+                    firstName: "",
+                    lastName: "",
+                    phone: "",
+                    gender: "",
+                    birthday: null,
+                    email: "",
+                    address: "",
+                    genders: [
+                        { value: '男', txt: '男' },
+                        { value: '女', txt: '女' },
+                    ]
+                },
+                methods: {
+                    check: function () {
+                        if (this.again != this.password) {
+                            return this.show = true;
+                        }
+                        if (this.again == this.password) {
+                            return this.show = false;
+                        }
+                    },
+                    submitInfo: function () {
+                        let _this = this;
+                        infoRequest = {
+                            FirstName: _this.firstName,
+                            LastName: _this.lastName,
+                            Phone: _this.phone,
+                            Gender: _this.gender,
+                            Email: _this.email,
+                            Birthday: _this.birthday,
+                            Address: _this.address,
+                            Account: _this.account,
+                            Password: _this.password,
+                        };
+                        Swal.fire({
+                            allowOutsideClick: false,
+                        icon: 'info',
+                            color: '#333',
+                            iconColor: '#D8CDB9',
+                            background: '#FFF',
+                            title: '正在檢驗中，請不要關閉頁面',
+                            showConfirmButton: false,
+                            timer: 2000,
+                            position: 'center'
+                        });
+                        axios.post("/api/member/Register", infoRequest)
+                            .then(response => {
+                                console.log(response.data)
+                                if (response.data == "帳號已註冊過") {
+                                     _this.accountDuplicate = true;
+                                } else if (response.data == "郵件已註冊過") {
+                                     _this.emailDuplicate = true;
+                                } else {
+                                    Swal.fire({
+                                        allowOutsideClick: false,
+                                        icon: 'success',
+                                        color: '#333',
+                                        iconColor: '#D8CDB9',
+                                        background: '#FFF',
+                                        title: '註冊成功',
+                                        html: '<div class="custom-swal-container"><div class="custom-swal-message">將跳轉至登入頁面!</div></div>',
+                                        showConfirmButton: false,
+                                        timer: 2500,
+                                        position: 'center'
+                                    }).then(result => {
+                                        if (result.dismiss === Swal.DismissReason.timer) {
+                                            window.location.href = `/MemberLogin/Index`;
+                                        }
+                                    });
+                                }
+                            });
+                    }
+                }
+            });
     </script>
 }
