--- a/EnjoyEat/EnjoyEat/wwwroot/css/memberLoginStyle.css
+++ b/EnjoyEat/EnjoyEat/wwwroot/css/memberLoginStyle.css
@@ -5,8 +5,11 @@ h4{
     border-radius: .25rem;
     font-size:20px;
 }
-#member{
-    margin-bottom:20px;
+div .form-text{
+    font-size:16px;
+}
+#member {
+    margin-bottom: 20px;
 }
 
 #Logo {
@@ -16,9 +19,12 @@ h4{
 }
 
 .row {
-     margin-right: 0; 
+    margin-right: 0;
+    align-items: center;
 }
-
+.nono{
+    color:red;
+}
 .row .left {
     margin-left: 12px;
 }
@@ -34,6 +40,39 @@ h4{
 }
 .btn{
 
+}
+
+/*datePicker*/
+.datepicker {
+    width: 100%;
+    border: 0px;
+}
+
+.calendar {
+    margin-left: -2px;
+    left: 0px;
+    padding: .375rem 2.25rem .375rem .75rem;
+}
+
+#datepicker input {
+    height: 38px;
+    width: 100%;
+    color: black;
+    background-color: #fff;
+    border-radius: .25rem;
+    font-weight: 400;
+    line-height: 1.5;
+    display: block;
+    padding: .375rem 2.25rem .375rem .75rem;
+}
+
+    #datepicker input::placeholder {
+        color: black; /* 在這裡更改顏色為你想要的顏色 */
+    }
+
+.mx-calendar-content .cell.disabled {
+    background-color: #F2E6E6;
+    font-weight: lighter;
 }
 
 /*.Account-setting {
